--- a/src/App.css
+++ b/src/App.css
@@ -43,5 +43,16 @@
 
 /* map */
 .leaflet-container{
-    height: 100vh;
+  height: 100vh;
+  z-index: 0 !important;
 }
+
+
+.map{
+  position: relative;
+}
+
+
+
+
+
